[package]
name = "jobicolet"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/andrescosta/jobicolet-sdk-rust"
description = "Very experimental and rudimentary WASM SDK for Jobico"
license-file = "LICENSE"
[dependencies]
# wee_aloc is a WebAssembly optimized allocator, which is needed to use non-numeric types like strings.
# See https://docs.rs/wee_alloc/latest/wee_alloc/
wee_alloc = "0.4.5"

# Below settings dramatically reduce wasm output size
# See https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-sizewasm-opt -Oz -o
# See https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
